--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net48</TargetFramework>
         <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
+        <ApplicationIcon>resources\voice_32.ico</ApplicationIcon>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System.Speech"/>
