--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -9,8 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="LibVLCSharp" Version="3.6.4"/>
-        <PackageReference Include="LibVLCSharp.WPF" Version="3.6.4"/>
+        <PackageReference Include="LibVLCSharp" Version="3.6.5"/>
+        <PackageReference Include="LibVLCSharp.WPF" Version="3.6.5"/>
+        <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
         <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16"/>
     </ItemGroup>
 
