--- a/WpfApp7/WpfApp7.csproj
+++ b/WpfApp7/WpfApp7.csproj
@@ -8,6 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
         <Folder Include="ViewModels"/>
     </ItemGroup>
 
