--- a/WpfApp8/WpfApp8.csproj
+++ b/WpfApp8/WpfApp8.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
@@ -12,6 +12,14 @@
         <Resource Include="Image\ic_action_toys_light.png"/>
         <None Remove="Image\ic_action_toys.png"/>
         <Resource Include="Image\ic_action_toys.png"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\WpfApp4\WpfApp4.csproj"/>
     </ItemGroup>
 
 </Project>
