--- a/WpfApp8/WpfApp8.csproj
+++ b/WpfApp8/WpfApp8.csproj
@@ -9,8 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="LibVLCSharp" Version="3.6.5"/>
+        <PackageReference Include="LibVLCSharp.WPF" Version="3.6.5"/>
         <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.4"/>
+        <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16"/>
     </ItemGroup>
 
 </Project>
