WpfApp8: 增加通知列表

--- a/WpfApp8/WpfApp8.csproj
+++ b/WpfApp8/WpfApp8.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.16"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Remove="Annotations.cs"/>
+    </ItemGroup>
+
 </Project>
