--- a/App09.Map/App09.Map.csproj
+++ b/App09.Map/App09.Map.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Maps.MapControl.WPF" Version="1.0.0.3"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.4"/>
     </ItemGroup>
 
