--- a/App10.Weather/App10.Weather.csproj
+++ b/App10.Weather/App10.Weather.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="InteractiveDataDisplay.WPF" Version="1.0.0"/>
         <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.4"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
