App10：将天气api的参数本地化配置

--- a/App10.Weather/App10.Weather.csproj
+++ b/App10.Weather/App10.Weather.csproj
@@ -57,4 +57,11 @@
         <Resource Include="Resources\Dark\99@1x.png"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Remove="App.ini"/>
+        <Content Include="App.ini">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
 </Project>
