App10：ini不需要代码格式化

--- a/App10.Weather/App.ini
+++ b/App10.Weather/App.ini
@@ -1,9 +1,9 @@
 [App Theme]
-ColorPreset = Default
-ShapePreset = Default
-AccentColor =
-AppTheme =
+ColorPreset=Default
+ShapePreset=Default
+AccentColor=
+AppTheme=
 
 [Other]
-Location = 31.401973:120.736730
-SenKey = SXq-OhxhzFn3WqkKq
+Location=31.401973:120.736730
+SenKey=SXq-OhxhzFn3WqkKq
