--- a/App05.TaskAndCancel/App05.TaskAndCancel.csproj
+++ b/App05.TaskAndCancel/App05.TaskAndCancel.csproj
@@ -2,14 +2,15 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0-windows10.0.18362.0</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
-        <PackageReference Include="ModernWpfUI" Version="0.9.4"/>
+        <PackageReference Include="ModernWpfUI" Version="0.9.5"/>
     </ItemGroup>
 
     <ItemGroup>
