--- a/App09.Map/App09.Map.csproj
+++ b/App09.Map/App09.Map.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0-windows10.0.18362.0</TargetFramework>
+        <TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
         <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
         <LangVersion>10</LangVersion>
@@ -17,7 +17,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Maps.MapControl.WPF" Version="1.0.0.3"/>
-        <PackageReference Include="ModernWpfUI" Version="0.9.4"/>
+        <PackageReference Include="ModernWpfUI" Version="0.9.5"/>
     </ItemGroup>
 
 </Project>
