--- a/App11.HIK/App11.HIK.csproj
+++ b/App11.HIK/App11.HIK.csproj
@@ -28,8 +28,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Resources\ForbidenSign.png"/>
-        <Resource Include="Resources\ForbidenSign.png"/>
+        <None Remove="Resources\ForbidenSign.png" />
+        <Resource Include="Resources\ForbidenSign.png" />
     </ItemGroup>
 
     <ItemGroup>
@@ -39,12 +39,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Dll"/>
-        <Folder Include="Models"/>
+        <Folder Include="HikSdkDll" />
+        <Folder Include="Models" />
     </ItemGroup>
 
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-        <Exec Command="xcopy /e /d /y $(ProjectDir)Dll\ $(ProjectDir)$(OutDir)\"/>
+        <Exec Command="xcopy /e /d /y $(ProjectDir)HikSdkDll\ $(ProjectDir)$(OutDir)\" />
     </Target>
 
 </Project>
