App11: 使用xaml布局实现HIK显示

--- a/App11.HIK/App11.HIK.csproj
+++ b/App11.HIK/App11.HIK.csproj
@@ -28,8 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Resources\ForbidenSign.png" />
-        <Resource Include="Resources\ForbidenSign.png" />
+        <Resource Include="Resources\ForbiddenSign.png" />
     </ItemGroup>
 
     <ItemGroup>
