--- a/App11.HIK/App11.HIK.csproj
+++ b/App11.HIK/App11.HIK.csproj
@@ -27,10 +27,10 @@
         <Reference Include="System.Windows.Forms"/>
         <Reference Include="WindowsFormsIntegration"/>
         <Reference Include="Microsoft.DwayneNeed, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>libs\Microsoft.DwayneNeed.dll</HintPath>
+            <HintPath>Assets\DwayneNeed\Microsoft.DwayneNeed.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.DwayneNeed.Win32, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>libs\Microsoft.DwayneNeed.Win32.dll</HintPath>
+            <HintPath>Assets\DwayneNeed\Microsoft.DwayneNeed.Win32.dll</HintPath>
         </Reference>
     </ItemGroup>
 
@@ -55,11 +55,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="HikSdkDll" />
+        <Folder Include="Assets"/>
     </ItemGroup>
 
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-        <Exec Command="xcopy /e /d /y $(ProjectDir)HikSdkDll\ $(ProjectDir)$(OutDir)\" />
+        <Exec Command="xcopy /e /d /y $(ProjectDir)Assets\HikSdk\ $(ProjectDir)$(OutDir)\"/>
     </Target>
 
 </Project>
