--- a/App12.SQLite/App12.SQLite.csproj
+++ b/App12.SQLite/App12.SQLite.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.7"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.7"/>
-        <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
     </ItemGroup>
