优化海康SDK的初始和退出流程

--- a/App11.HIK/App.ini
+++ b/App11.HIK/App.ini
@@ -5,7 +5,7 @@ AccentColor=
 AppTheme=
 
 [HikVision]
-UserName=admin
-Password=js123456
+UserName = admin
+Password = js1787v5.cam
 Port = 8000
-IPAddress = 192.168.7.195
+IPAddress = 192.168.77.105
