--- a/App10.Weather/App.ini
+++ b/App10.Weather/App.ini
@@ -5,5 +5,5 @@ AccentColor=
 AppTheme=
 
 [Other]
-Location=31.401973:120.736730
-SenKey=SXq-OhxhzFn3WqkKq
+Location = 31.401973:120.736730
+SenKey = "Sv2pJNvy3jBcyKbrd"
