APP14: 实现设备归属修改

--- a/App14.IASystem/App14.IASystem.csproj
+++ b/App14.IASystem/App14.IASystem.csproj
@@ -15,4 +15,8 @@
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Converter"/>
+    </ItemGroup>
+
 </Project>
