--- a/App14.IASystem/App14.IASystem.csproj
+++ b/App14.IASystem/App14.IASystem.csproj
@@ -9,7 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
-        <PackageReference Include="InteractiveDataDisplay.WPF" Version="1.0.0"/>
+        <PackageReference Include="LiveChartsCore" Version="2.0.0-beta.603"/>
+        <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.603"/>
+        <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-beta.603"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39"/>
@@ -17,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Assets"/>
         <Folder Include="Converter"/>
     </ItemGroup>
 
