--- a/App12.SQLite/App12.SQLite.csproj
+++ b/App12.SQLite/App12.SQLite.csproj
@@ -8,9 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.2"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.4"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
     </ItemGroup>
