App14: 增加鱼塘信息编辑

--- a/App14.IASystem/App14.IASystem.csproj
+++ b/App14.IASystem/App14.IASystem.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>disable</Nullable>
         <UseWPF>true</UseWPF>
+        <AssemblyName>iatool</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
@@ -29,7 +30,6 @@
 
     <ItemGroup>
         <Folder Include="Assets"/>
-        <Folder Include="Converter"/>
     </ItemGroup>
 
     <ItemGroup>
