App11:优化代码可读性

--- a/App11.HIK/App.ini
+++ b/App11.HIK/App.ini
@@ -5,7 +5,7 @@ AccentColor=
 AppTheme=
 
 [HikVision]
-UserName = admin
-Password = js1787v5.cam
-Port = 8000
-IPAddress = 192.168.77.106
+HikUserName = admin
+HikPassword = js1787v5.cam
+HikPort = 8000
+HikDemoIp = 192.168.77.102
