--- a/App11.HIK/App11.HIK.csproj
+++ b/App11.HIK/App11.HIK.csproj
@@ -2,9 +2,9 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
-        <LangVersion>10</LangVersion>
+        <LangVersion>11</LangVersion>
         <NeutralLanguage>zh-CN</NeutralLanguage>
         <TargetFramework>net48</TargetFramework>
     </PropertyGroup>
@@ -23,7 +23,7 @@
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-        <PackageReference Include="Serilog" Version="2.12.0"/>
+        <PackageReference Include="Serilog" Version="3.0.1"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
         <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0"/>
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
