--- a/App19.SciChart/App19.SciChart.csproj
+++ b/App19.SciChart/App19.SciChart.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
+        <PackageReference Include="Mar.Console" Version="0.3.0"/>
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
         <PackageReference Include="NAudio" Version="2.1.0"/>
@@ -28,7 +29,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Assets\"/>
         <Folder Include="Resources\"/>
     </ItemGroup>
 
@@ -36,5 +36,9 @@
         <None Remove="Resources\main.ico"/>
         <Resource Include="Resources\main.ico"/>
     </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Exec Command="xcopy /e /d /y $(ProjectDir)Assets\scic.json $(ProjectDir)$(OutDir)"/>
+    </Target>
 
 </Project>
