--- a/App19.SciChart/App19.SciChart.csproj
+++ b/App19.SciChart/App19.SciChart.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <ApplicationIcon>Resources\main.ico</ApplicationIcon>
+        <RootNamespace>App19.SciChart00</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,10 +19,11 @@
         <PackageReference Include="SciChart.DirectX" Version="6.6.0.26505"/>
         <PackageReference Include="SciChart.DrawingTools" Version="6.6.0.26505"/>
         <PackageReference Include="SciChart.ExternalDependencies" Version="6.6.0.26505"/>
+        <PackageReference Include="SciChart3D" Version="6.6.0.26505"/>
     </ItemGroup>
 
     <ItemGroup>
-        <Page Update="Views\MainWindow.xaml">
+        <Page Update="Views\SplashWindow.xaml">
             <Generator>MSBuild:Compile</Generator>
             <XamlRuntime>Wpf</XamlRuntime>
             <SubType>Designer</SubType>
