--- a/App18.Material/App18.Material.csproj
+++ b/App18.Material/App18.Material.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
+        <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1"/>
         <PackageReference Include="MaterialDesignThemes" Version="4.9.0"/>
     </ItemGroup>
 
