--- a/App18.Material/App18.Material.csproj
+++ b/App18.Material/App18.Material.csproj
@@ -9,10 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
-        <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1"/>
-        <PackageReference Include="Mar.Console" Version="0.4.0"/>
-        <PackageReference Include="MaterialDesignThemes" Version="4.9.0"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+        <PackageReference Include="Humanizer.Core.zh-CN" Version="2.14.1" />
+        <PackageReference Include="Mar.Console" Version="0.4.0" />
+        <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -24,26 +24,33 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Resources\ic_tech.ico"/>
-        <None Remove="Resources\logo_home.png"/>
-        <Resource Include="Resources\logo_home.png"/>
-        <None Remove="Resources\ic_main_2.ico"/>
-        <Resource Include="Resources\ic_main_2.ico"/>
-        <None Remove="Resources\ic_main.ico"/>
-        <Resource Include="Resources\ic_main.ico"/>
-        <None Remove="Resources\girl-cleaning-dishes.png"/>
-        <Resource Include="Resources\girl-cleaning-dishes.png"/>
-        <None Remove="Resources\illustrations\IMG_0641.jpg"/>
-        <Resource Include="Resources\illustrations\IMG_0641.jpg"/>
-        <None Remove="Resources\illustrations\IMG_0642.jpg"/>
-        <None Remove="Resources\illustrations\IMG_0643.jpg"/>
-        <None Remove="Resources\illustrations\IMG_0644.jpg"/>
-        <None Remove="Resources\illustrations\IMG_0642.png"/>
-        <Resource Include="Resources\illustrations\IMG_0642.png"/>
-        <None Remove="Resources\illustrations\IMG_0643.png"/>
-        <Resource Include="Resources\illustrations\IMG_0643.png"/>
-        <None Remove="Resources\illustrations\IMG_0644.png"/>
-        <Resource Include="Resources\illustrations\IMG_0644.png"/>
+        <None Remove="Resources\ic_tech.ico" />
+        <None Remove="Resources\logo_home.png" />
+        <Resource Include="Resources\logo_home.png" />
+        <None Remove="Resources\ic_main_2.ico" />
+        <Resource Include="Resources\ic_main_2.ico" />
+        <None Remove="Resources\ic_main.ico" />
+        <Resource Include="Resources\ic_main.ico" />
+        <None Remove="Resources\girl-cleaning-dishes.png" />
+        <Resource Include="Resources\girl-cleaning-dishes.png" />
+        <None Remove="Resources\illustrations\IMG_0641.jpg" />
+        <Resource Include="Resources\illustrations\IMG_0641.jpg" />
+        <None Remove="Resources\illustrations\IMG_0642.jpg" />
+        <None Remove="Resources\illustrations\IMG_0643.jpg" />
+        <None Remove="Resources\illustrations\IMG_0644.jpg" />
+        <None Remove="Resources\illustrations\IMG_0642.png" />
+        <Resource Include="Resources\illustrations\IMG_0642.png" />
+        <None Remove="Resources\illustrations\IMG_0643.png" />
+        <Resource Include="Resources\illustrations\IMG_0643.png" />
+        <None Remove="Resources\illustrations\IMG_0644.png" />
+        <Resource Include="Resources\illustrations\IMG_0644.png" />
+        <None Update="Assets\mails.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="xcopy /e /d /y $(ProjectDir)Assets\mails.json $(ProjectDir)$(OutDir)" />
+    </Target>
 
 </Project>
