App20:优化数据过长时显示问题

--- a/App20.Focus/App20.Focus.csproj
+++ b/App20.Focus/App20.Focus.csproj
@@ -22,4 +22,9 @@
         </Page>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Remove="Resource\ImgPeperPlane.png"/>
+        <Resource Include="Resource\ImgPeperPlane.png"/>
+    </ItemGroup>
+
 </Project>
