--- a/App14.IASystem/App14.IASystem.csproj
+++ b/App14.IASystem/App14.IASystem.csproj
@@ -13,7 +13,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
         <PackageReference Include="ConsoleTables" Version="2.5.0"/>
-        <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-beta.911"/>
+        <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc1.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
             <PrivateAssets>all</PrivateAssets>
