统一logo和icon | App18.Material

--- a/App18.Material/App18.Material.csproj
+++ b/App18.Material/App18.Material.csproj
@@ -24,29 +24,28 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Resources\ic_tech.ico" />
-        <None Remove="Resources\logo_home.png" />
-        <Resource Include="Resources\logo_home.png" />
-        <None Remove="Resources\ic_main_2.ico" />
-        <Resource Include="Resources\ic_main_2.ico" />
-        <None Remove="Resources\ic_main.ico" />
-        <Resource Include="Resources\ic_main.ico" />
-        <None Remove="Resources\girl-cleaning-dishes.png" />
-        <Resource Include="Resources\girl-cleaning-dishes.png" />
-        <None Remove="Resources\illustrations\IMG_0641.jpg" />
-        <Resource Include="Resources\illustrations\IMG_0641.jpg" />
-        <None Remove="Resources\illustrations\IMG_0642.jpg" />
-        <None Remove="Resources\illustrations\IMG_0643.jpg" />
-        <None Remove="Resources\illustrations\IMG_0644.jpg" />
-        <None Remove="Resources\illustrations\IMG_0642.png" />
-        <Resource Include="Resources\illustrations\IMG_0642.png" />
-        <None Remove="Resources\illustrations\IMG_0643.png" />
-        <Resource Include="Resources\illustrations\IMG_0643.png" />
-        <None Remove="Resources\illustrations\IMG_0644.png" />
-        <Resource Include="Resources\illustrations\IMG_0644.png" />
+        <None Remove="Resources\ic_tech.ico"/>
+        <None Remove="Resources\logo_home.png"/>
+        <None Remove="Resources\ic_main.ico"/>
+        <Resource Include="Resources\ic_main.ico"/>
+        <None Remove="Resources\girl-cleaning-dishes.png"/>
+        <Resource Include="Resources\girl-cleaning-dishes.png"/>
+        <None Remove="Resources\illustrations\IMG_0641.jpg"/>
+        <Resource Include="Resources\illustrations\IMG_0641.jpg"/>
+        <None Remove="Resources\illustrations\IMG_0642.jpg"/>
+        <None Remove="Resources\illustrations\IMG_0643.jpg"/>
+        <None Remove="Resources\illustrations\IMG_0644.jpg"/>
+        <None Remove="Resources\illustrations\IMG_0642.png"/>
+        <Resource Include="Resources\illustrations\IMG_0642.png"/>
+        <None Remove="Resources\illustrations\IMG_0643.png"/>
+        <Resource Include="Resources\illustrations\IMG_0643.png"/>
+        <None Remove="Resources\illustrations\IMG_0644.png"/>
+        <Resource Include="Resources\illustrations\IMG_0644.png"/>
         <None Update="Assets\mails.json">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Remove="Resources\logo_main.png"/>
+        <Resource Include="Resources\logo_main.png"/>
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
