--- a/App16.Python/App16.Python.csproj
+++ b/App16.Python/App16.Python.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1"/>
         <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc1.1"/>
+        <PackageReference Include="Mar.Console" Version="0.4.0"/>
         <PackageReference Include="Mar.Controls" Version="0.3.3"/>
         <PackageReference Include="ModernWpfUI" Version="0.9.6"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
